2000-03-17  Akim Demaille  <akim@epita.fr>

	In Autoconf 2.13, although AC_OUTPUT_COMMANDS did double quote its
	arguments, AC_OUTPUT arguments 2 and 3 were not!  Currently,
	AC_OUTPUT over quotes too: stop that.
	Reported by Martin Buchholz.

	* doc/autoconf.texi (Output): Don't expand on the ternary
	AC_OUTPUT.
	* acgeneral.m4 (AC_OUTPUT): Don't over quote $2 and $3.

2000-03-17  Joseph S. Myers  <jsm28@cam.ac.uk>

	* acspecific.m4 (AC_SYS_LONG_FILE_NAMES): Security fixes: create
	the temp files in a private temporary directory, not directly in
	TMPDIR.

2000-03-17  Akim Demaille  <akim@epita.fr>

	Install the IFS we need once for all.

	* acgeneral.m4 (_AC_INIT_PREPARE_ENVIRONMENT): New macro.
	Handle the NLS envvars, and IFS.
	(_AC_INIT_PREPARE): Use it, no longer set the NLS envvars.
	(_AC_WHICH_A, AC_PATH_PROG): Rely on the default IFS.
	* acspecific.m4 (AC_PROG_INSTALL, AC_FUNC_SELECT_ARGTYPES):
	Likewise.

2000-03-17  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_TRY_CPP, AC_EGREP_CPP, AC_TRY_COMPILE,
	AC_TRY_LINK, AC_TRY_RUN_NATIVE): Simplify the removal of the
	contest files: don't remove them before running the actions, just
	remove them at the end of the macro.

2000-03-16  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_FUNC_SELECT_ARGTYPES): Use
	  : ${foo='some words'}
	not
	  : ${foo=some words}
	since this is not portable: Digital Unix v5.0: `bad substitution'.
	From Nicolas Joly.

2000-3-16  Lars J. Aas  <larsa@sim.no>

	* libm4.m4 (m4_assert, m4_shiftn): New macros.
	(m4_case,m4_match): Rewrite to use m4_shiftn (for readability reasons).
	(m4_for): Add the STEP argument and some argument-verifying asserts.
	(m4_split): Correct spaces to tabulator in regexp.

2000-03-15  Akim Demaille  <akim@epita.fr>

	Revamp AC_FUNC_SELECT_ARGTYPES.

	* acspecific.m4 (AC_FUNC_SELECT_ARGTYPES): Use a single cache
	variable instead of three.
	Use AC_CACHE_CHECK.
	Shorten the name of the var loops, they are no longer cached.